fix header jump bug

--- a/dev/settings/settingspageanimation.css
+++ b/dev/settings/settingspageanimation.css
@@ -3,6 +3,7 @@ setting-pages, #settings_view {
 }
 
 .settingspage_animateable_title {
+	transform-origin: center top;
 	transition: transform 0.3s cubic-bezier(.4, 0, .2, 1);
 	z-index: 1;
 }
